--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   dio: ^4.0.6
   path_provider: ^2.0.11
   permission_handler: ^10.0.0
-  downloads_path_provider_28: ^0.1.2
+  flutter_launcher_icons: "^0.9.2"
+  lecle_downloads_path_provider: ^0.0.2+7
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +55,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+flutter_icons:
+  image_path: "images/icon_circle_2.png"
+  adaptive_icon_foreground: "images/icon_circle_2.png"
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  adaptive_icon_background: "#000000"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
